无关代码调整

--- a/Sigo.WebApi/appsettings.json
+++ b/Sigo.WebApi/appsettings.json
@@ -1,7 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "ECIS5": "User ID=ecisuser;Password=sa123456; Initial Catalog=ECISPlatform5;Data Source=172.17.13.2;Connection Timeout=30;",
-    "ECISInterface": "User ID=ecisuser;Password=sa123456; Initial Catalog=ECISInterface;Data Source=172.17.13.2;Connection Timeout=30;"
+    "Sigo": "User ID=Sigo;Password=Sigo3568; Initial Catalog=Sigoway;Data Source=172.17.13.2;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
@@ -11,11 +10,11 @@
     }
   },
   "AllowedHosts": "*",
-  "JwtSettings": {
-    "SecurityKey": "d0ecd23c-dfdb-4005-a2ea-0fea210c858a", // 密钥
-    "Issuer": "jwtIssuerEcis", // 颁发者
-    "Audience": "jwtAudienceEcis", // 接收者
-    "ExpireSeconds": 600 // 过期时间（30s）
+  "JwtSetting": {
+    "SecurityKey": "84CBEC75-EF57-46BF-9C37-1B0EC160D320", // 密钥
+    "Issuer": "SigoJwtIssuer", // 颁发者
+    "Audience": "SigoJwtAudience", // 接收者
+    "ExpireSeconds": 600 // 过期时间（600s）
   },
   "WebSocket": {
     "Options": {
