--- a/Sigo.WebApi/appsettings.json
+++ b/Sigo.WebApi/appsettings.json
@@ -16,26 +16,18 @@
     "Audience": "SigoJwtAudience", // 接收者
     "ExpireSeconds": 600 // 过期时间（600s）
   },
-  "WebSocket": {
-    "Options": {
-      "ReceiveBufferSize": 4, //接收消息缓存单位：4KB
-      "KeepAliveInterval": 2 //心跳检测间隔时间：2分钟
-    },
-    "PipelineNames": {
-        "ExecOrders": "/wsOrder"
-      }
+  "WebSocketSetting": {
+    "ReceiveBufferSize": 4, //接收消息缓存单位：4KB
+    "KeepAliveInterval": 2, //心跳检测间隔时间：2分钟
+    "ChatPipelineName": "/wsChat"
   },
-  "SignalR": {
+  "SignalRSetting": {
     "Origins": [
       "http://localhost:5000",
       "http://localhost:5001",
       "http://127.0.0.1:5001"
     ],
-    "Hubs": {
-      "ExecOrders": {
-        "HubName": "/hubOrder",
-        "ReceiveMsgMethodName": "ReceiveMessage"
-      }
-    }
+    "ChatHubName": "/chathub",
+    "ChatHubReceiveMsgMethodName": "ReceiveMessage"
   }
 }
